ecf modifie filter

--- a/projet cf/projet/pizzaContact.html
+++ b/projet cf/projet/pizzaContact.html
@@ -23,7 +23,7 @@
         <li > <a href="pizzahome.html">home</a></li>
         <li ><a href="menuhassan.html">Menu</a></li>
         <li ><a href="pizzaContact.html">Contact</a></li>
-        <button class="commande">Votre Commande</button>
+        <li><button  id="commande">Votre Commande</button></li>
        </ul>
     </nav>
     </div>
