--- a/projet cf/projet/menuhassan.html
+++ b/projet cf/projet/menuhassan.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-	<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="pizzacss.css">
@@ -13,23 +13,29 @@
     <title>Document</title>
 </head>
 <body>
-    <header >
+    <header>
        <div class="container">
         <nav>
             <div class="logo">
-        <a> Pizza<span>Hot</span></a>
+                <a> Pizza<span>Hot</span></a>
+            </div>
+            <ul id="ul">
+                <li><a href="pizza.html">home</a></li>
+                <li><a href="menuhassan.html">Menu</a></li>
+                <li><a href="menuhassan.html">Contact</a></li>
+                <li><button id="commande">Votre Commande</button></li>
+            </ul>
+        </nav>
        </div>
-       <ul>
-        <li > <a href="pizza.html">home</a></li>
-        <li ><a href="menuhassan.html">Menu</a></li>
-        <li ><a href="menuhassan.html">Contact</a></li>
-        <button class="commande">Votre Commande</button>
-       </ul>
-    </nav>
-    </div>
     </header>
-   <main id="main" class="row"></main> 
-  
-
+    <main id="main" class="row">
+        <div class="col-12">
+            <select id="mon-filtre" class="form-select">
+                <option value="toutes">Toutes les bases</option>
+                <option value="tomate">Base Tomate</option>
+                <option value="creme">Base Crème</option>
+            </select>
+        </div>
+    </main>
 </body>
 </html>
