--- a/projet cf/projet/pizzahome.html
+++ b/projet cf/projet/pizzahome.html
@@ -24,7 +24,7 @@
         <li ><a href="menuhassan.html">Menu</a></li>
         <li ><a href="pizzaContact.html">Contact</a></li>
         
-        <button class="commande">Votre Commande</button>
+        <li><button id="commande">Votre Commande</button></li>
        </ul>
     </nav>
     </div>
